# forge-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  mlx_server.py
.github/workflows/: release.yml  upload-r2.yml
docs/: ARCHITECTURE.md  MLX_INTEGRATION.md  architecture-flow.mmd  architecture-sequence.mmd
examples/: mlx_deep_integration.rs
npm/: README.md  package.json
scripts/: mlx_embeddings.py  mlx_llm.py  mlx_server.py  requirements.txt
src/: edit_agent.rs  lib.rs  main.rs  session.rs  setup.rs
src/api/: anthropic.rs  gemini.rs  mod.rs  openai.rs  prompts.rs  streaming.rs  types.rs
src/checkpoint/: mod.rs
src/code_graph/: builder.rs  impact.rs  mod.rs  trace.rs
src/config/: mod.rs
src/context/: mod.rs
src/context7/: mod.rs
src/llm/: candle_client.rs  candle_manager.rs  mlx_client.rs  mlx_manager.rs  mlx_native.rs  mod.rs  tools.rs
src/lsp/: client.rs  languages.rs  mod.rs  types.rs
src/repomap/: mod.rs
src/tools/: code.rs  embeddings.rs  embeddings_store.rs  execute.rs  files.rs  ide.rs  lint.rs  mod.rs  process.rs  search.rs  trace.rs  treesitter.rs  watcher.rs  web.rs
src/tui/: mod.rs
tests/: verify_agent_loop.rs
