[package]
name = "forge"
version = "0.4.1"
edition = "2021"
description = "Terminal-first AI coding agent"
license = "MIT"
repository = "https://github.com/tharunmarella/forge-rs"

[workspace]
members = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI & TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
termimad = "0.31"
tui-textarea = { version = "0.4", features = ["crossterm"] }
throbber-widgets-tui = "0.8"

# HTTP & API
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LLM Framework
rig-core = "0.30"
async-trait = "0.1"


# File watching & operations
notify = "7"
walkdir = "2"
ignore = "0.4"
regex = "1.10"
once_cell = "1.19"
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Code parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"


# Git operations
git2 = { version = "0.19", default-features = false }

# OpenSSL
openssl = { version = "0.10", features = ["vendored"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utils
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
similar = "2"
shellexpand = "3"
urlencoding = "2"
petgraph = "0.6"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "forge"
path = "src/lib.rs"

[[bin]]
name = "forge"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
lto = "thin"
